fix: make stonecutter panel Java 8 compatible